[metadata]
name = beatdrop
version = attr: beatdrop.__version__
description = Simplified, scalable task scheduling with typechecking.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Brandon Temple Paul
author_email = btemplepgit@gmail.com
url = https://github.com/btemplep/beatdrop
classifiers = 
    Development Status :: 3 - Alpha
    Framework :: Celery
    Framework :: FastAPI
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet
license = MIT
license_files = 
    License
keywords = 
    celery
    beat
    beatdrop
    queue
    redis
    rq
    schedule
    scheduler
    sql
python_requires = >= 3.8

[options]
package_dir=
    =src
packages = find:
install_requires =
    croniter
    loguru
    jsonpickle
    pydantic < 2
    pytz

[options.packages.find]
where=src
exclude =
    tests

[options.extras_require]
celery = 
    celery
redis = 
    pottery == 3.0.0
    redis
rq = 
    rq
sql = 
    SQLAlchemy < 2.0.0
all = 
    beatdrop[celery,redis,rq,sql]
dev = 
    build
    coverage
    nox
    piccolo-theme
    pytest
    pytest-cov
    redislite
    sphinx
    twine
